syntax = "proto3";

option go_package = "github.com/velibor7/XML/common/job";

package job;

import "google/api/annotations.proto";

service JobService{
    rpc Get (GetRequest) returns (GetResponse){
        option (google.api.http) = {
            get:"/jobs/{id}"
        };
    }
    rpc GetAll (GetAllRequest) returns (GetAllResponse){
        option (google.api.http) = {
            get:"/jobs"
        };
    }
    rpc Create (CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/jobs"
            body: "job"
        };
    }
    rpc GetByTitle(GetByTitleRequest) returns (GetByTitleResponse){
        option (google.api.http) = {
            get:"/jobs/search/{title}"
        };
    }
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Job job = 1;
}

message GetAllRequest {

}

message GetAllResponse{
    repeated Job job = 1;
}

message CreateRequest {
    Job job = 1;
}

message CreateResponse {
    Job job = 1;
}

message GetByTitleRequest {
    string title = 1;
}

message GetByTitleResponse {
    repeated Job job = 1;
}

message Job {
    string id = 1;
    string title = 2;
    string description = 3;
    repeated string skills = 4;
    string userId = 5;
}





